--- a/templates/home.html
+++ b/templates/home.html
@@ -10,11 +10,12 @@
 
             <script>
                 $(document).ready(function() {
-                    var count = 1;
                     $('#add').click(function() {
                         var currency = $('#currency').val();
                         var denom = $('#denom').val();
                         var quantity = $('#quantity').val();
+                        
+
                         var letters = /^[A-Za-z]+$/;
                         var numbers = /^[0-9]+$/;
 
@@ -95,10 +96,16 @@
                         </div>
                     </div>
                     <form class="form-inline">
-                        <input type="text" class="form-control input-small" placeholder="Currency">
-                        <input type="text" class="form-control input-small" placeholder="Denomination">
-                        <input type="text" class="form-control input-small" placeholder="Quantity">
-                        <input type="submit" class="btn btn-info" value="Add" id="add">
+                        <div id="group1">
+                            <input type="text" id="currency" class="form-control input-small" placeholder="Currency">
+                        </div>
+                        <div id="group2">
+                            <input type="text" id="denom" class="form-control input-small" placeholder="Denomination">
+                        </div>
+                        <div id="group3">
+                            <input type="text" id="quantity" class="form-control input-small" placeholder="Quantity">
+                        </div>
+                        <input type="submit" class="btn btn-info" value="+" id="add">
                     </form>
                 </div>
             </div>
